# theoreticalbulkflows_windowfunctions

./: Makefile  README.md  bulkflowcalc_sphericalsymm.py  calculate_bulkflowvector_varyinggeometries.py  code_plot_bulkflows_literature.py  main.py  plot_mocks_amplitude_vs_spheretheory.py  plot_powerspectrum_forsurveygeometry.py  powerspectrum_SDSS_simple_mocks.csv  pyproject.toml  script_get_matterpower.py  test_code_1dBulkflowintegral_sphere.py  testcodefft.py
