[project]
name = "shared-codes-astro"
version = "0.1.0"
description = "Some code for getting Fourier space window functions and computing theoretical bulk flows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cython>=3.0.12",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "numpy<=3.0.0",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "rich>=13.9.4",
    "scipy>=1.15.2",
    "setuptools>=68.0.0",
    "camb",
    "astropy"
   # "classy>=3.2.5.0"
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.11.0",
]
